@@ -62,7 +62,7 @@ JNIEXPORT jboolean JNICALL
 
 JNIEXPORT jboolean JNICALL
         Java_normal_engine_implementation_jni_triangulation_NJNITriangulation_fourFourMove
-        (JNIEnv *env, jobject me, jint newAxis, jobject e, jboolean check,
+        (JNIEnv *env, jobject me, jobject e, jint newAxis, jboolean check,
         jboolean perform) {
     return GET_ENGINE_OBJECT(env, NTriangulation, me)->fourFourMove(
         GET_ENGINE_OBJECT(env, NEdge, e), newAxis, check, perform);
